[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = "tutorial of fastapi"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.87.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
